<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="@dimen/_50sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="@dimen/_40sdp"
            android:gravity="center"
            android:orientation="vertical">


            <ImageView
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:src="@drawable/img_cake_coffee" />

            <ImageView
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_70sdp"
                android:src="@drawable/img_logo_rikai" />

            <TextView
                android:id="@+id/txtInformLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:textColor="@color/text_red"
                android:fontFamily="@font/inter_300"
                android:visibility="invisible"
                android:text="Username or Password is wrong/empty!"/>

            <EditText
                android:id="@+id/edtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/bg_edt_login"
                android:fontFamily="@font/inter_400"
                android:hint="@string/username"
                android:minHeight="48dp"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/_20sdp"
                android:paddingVertical="@dimen/_5sdp"
                android:textSize="@dimen/_18ssp" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/bg_edt_login"
                android:fontFamily="@font/inter_400"
                android:hint="@string/password"
                android:minHeight="48dp"
                android:inputType="textPassword"
                android:singleLine="true"
                android:paddingHorizontal="@dimen/_20sdp"
                android:paddingVertical="@dimen/_5sdp"
                android:textSize="@dimen/_18ssp" />

            <TextView
                android:id="@+id/txtLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/bg_txt_login"
                android:fontFamily="@font/inter_600"
                android:paddingHorizontal="@dimen/_20sdp"
                android:paddingVertical="@dimen/_5sdp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/_20ssp" />

        </LinearLayout>

    </RelativeLayout>
</androidx.core.widget.NestedScrollView>