<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.kitchen.KitchenFragment">

    <LinearLayout
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/text_blue"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/_12sdp"
            android:fontFamily="@font/inter_600"
            android:textColor="@color/border_blue"
            android:paddingHorizontal="@dimen/_12sdp"
            android:textSize="@dimen/_18ssp"
            android:background="@drawable/bg_edt_login"
            android:text="Shift"/>
        <TextView
            android:id="@+id/txtLoginAccountName"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/loginaccount_name"
            android:fontFamily="@font/inter_500"
            android:gravity="center_vertical|right"
            android:paddingTop="@dimen/_8sdp"
            android:paddingRight="@dimen/_8sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/imgMenuToolBar"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="match_parent"
            android:text="@string/loginaccount_name"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/img_menu_toolbar"
            app:tint="@color/white" />

    </LinearLayout>



    <LinearLayout
        android:id="@+id/llKitchenListTitle1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_8sdp"
        android:paddingVertical="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@+id/toolBar">

        <TextView
            android:id="@+id/txtUserName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:fontFamily="@font/inter_600"
            android:text="@string/user_s_name"
            android:textColor="@color/text_blue"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:id="@+id/txtUserRole"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:fontFamily="@font/inter_600"
            android:text="@string/role"
            android:textColor="@color/text_blue"
            android:textSize="@dimen/_14sdp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/img_edit_user"
            android:visibility="invisible" />


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcyUserManagement"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingHorizontal="@dimen/_12sdp"
        android:paddingTop="@dimen/_12sdp"
        android:scrollbars="none"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/llKitchenListTitle1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:spanCount="1"
        tools:listitem="@layout/item_user" />




</androidx.constraintlayout.widget.ConstraintLayout>